--- a/public/index.html
+++ b/public/index.html
@@ -384,6 +384,11 @@
     <div class="col-12 col-xl-6">
       
         <h3 class="fs-1 fw-bold text-center text-primary pb-3">Contactos PSIKIT</h3>
+        <div>
+          Email: <a href="mailto:psikitformacoes@gmail.com" target="_top">psikitformacoes@gmail.com</a>
+          <br>
+          Página do Instagram: <a href="https://www.instagram.com/psikit_formacoes/">@psikit_formacoes</a>
+        </div>
       
     </div>
   </div>
